--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,11 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files — .env.example is committed as template
+.env
+.env.local
+.env.*.local
+!.env.example
 
 # vercel
 .vercel
