--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "@next/bundle-analyzer": "^16.1.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
