--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,12 @@
 # Brand (client customization)
 # -----------------------------------------------------------------------------
 NEXT_PUBLIC_BRAND_NAME="Guloyas Tours"
-NEXT_PUBLIC_BRAND_TAGLINE="Premium Products"
+NEXT_PUBLIC_BRAND_TAGLINE="Tours y Experiencias"
+# Must match your live domain for link preview image (e.g. https://guloyastours.com)
 NEXT_PUBLIC_SITE_URL="https://example.com"
 NEXT_PUBLIC_LOGO_PATH="/logo.png"
+# Optional: dedicated OG image for link preview (1200×630). If unset, logo is used. Path or absolute URL.
+# NEXT_PUBLIC_OG_IMAGE="/og.png"
 NEXT_PUBLIC_WHATSAPP_NUMBER="18297188926"
 NEXT_PUBLIC_WHATSAPP_MESSAGE="Hello, I'd like more information."
 NEXT_PUBLIC_CONTACT_EMAIL="guloyastours@gmail.com"
