--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@
 # Brand (client customization)
 # -----------------------------------------------------------------------------
 NEXT_PUBLIC_BRAND_NAME="Guloyas Tours"
+# Tourism/experience in Spanish (e.g. Tours y Experiencias). Used in header/title.
 NEXT_PUBLIC_BRAND_TAGLINE="Tours y Experiencias"
 # Must match your live domain for link preview image (e.g. https://guloyastours.com)
 NEXT_PUBLIC_SITE_URL="https://example.com"
