--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,12 @@ CRON_SECRET=""
 # WHATSAPP_VERIFY_TOKEN=""
 
 # -----------------------------------------------------------------------------
+# Vercel Blob (required for product image uploads)
+# Create a Blob store in Vercel Dashboard; use token locally or run: vercel env pull
+# -----------------------------------------------------------------------------
+BLOB_READ_WRITE_TOKEN=""
+
+# -----------------------------------------------------------------------------
 # Rate limiting (optional — recommended for production)
 # -----------------------------------------------------------------------------
 # UPSTASH_REDIS_REST_URL=""
