Enhance product pricing display: add support for child prices in product cards, invoice history, and admin dashboard. Update related interfaces and logic to differentiate between adult and kid pricing.

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ NEXT_PUBLIC_CONTACT_EMAIL_2=""
 NEXT_PUBLIC_ADDRESS_STREET="C/ Casimira Hereaux 4, Enriquillo"
 NEXT_PUBLIC_ADDRESS_CITY="San Pedro de Macorís DR 21000"
 NEXT_PUBLIC_ADDRESS_COUNTRY="Dominican Republic"
-NEXT_PUBLIC_INSTAGRAM_HANDLE=""
-NEXT_PUBLIC_INSTAGRAM_URL=""
+NEXT_PUBLIC_INSTAGRAM_HANDLE="guloyastours"
+NEXT_PUBLIC_INSTAGRAM_URL="https://www.instagram.com/guloyastours?igsh=MTFtZXN1NGJwdzRt"
 NEXT_PUBLIC_FOUNDED_YEAR=""
 # COMPANY_RNC (optional — for invoice PDF footer, e.g. 132-93225-2)
 # COMPANY_RNC="132-93225-2"
