--- a/.env.example
+++ b/.env.example
@@ -18,11 +18,14 @@ NEXT_PUBLIC_WHATSAPP_NUMBER="18297188926"
 NEXT_PUBLIC_WHATSAPP_MESSAGE="Hello, I'd like more information."
 NEXT_PUBLIC_CONTACT_EMAIL="guloyastours@gmail.com"
 NEXT_PUBLIC_CONTACT_EMAIL_2=""
-NEXT_PUBLIC_ADDRESS_STREET="C/ Casimira Hereaux 4, Enriquillo"
+NEXT_PUBLIC_ADDRESS_STREET="Avenida Mauricio Báez #19, Sector los 4 Caminos"
 NEXT_PUBLIC_ADDRESS_CITY="San Pedro de Macorís DR 21000"
 NEXT_PUBLIC_ADDRESS_COUNTRY="Dominican Republic"
 NEXT_PUBLIC_INSTAGRAM_HANDLE="guloyastours"
 NEXT_PUBLIC_INSTAGRAM_URL="https://www.instagram.com/guloyastours?igsh=MTFtZXN1NGJwdzRt"
+# Optional: TikTok profile (handle for display, URL for link)
+# NEXT_PUBLIC_TIKTOK_HANDLE="guloyastours"
+# NEXT_PUBLIC_TIKTOK_URL="https://www.tiktok.com/@guloyastours?_r=1&_t=ZP-93bAp118kzn"
 NEXT_PUBLIC_FOUNDED_YEAR=""
 # COMPANY_RNC (optional — for invoice PDF footer, e.g. 132-93225-2)
 # COMPANY_RNC="132-93225-2"
